--- a/pom.xml
+++ b/pom.xml
@@ -7,5 +7,12 @@
     <groupId>groupId</groupId>
     <artifactId>FavorDrop</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
+            <version>7.0</version>
+        </dependency>
+    </dependencies>
 
 </project>
