--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
             <artifactId>jersey-json</artifactId>
             <version>1.8</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.0-alpha4</version>
+        </dependency>
     </dependencies>
 
 </project>
